# pathrehnda

./: .gitignore  CMakeLists.txt  image.ppm
include/: Aggregator.hpp  Camera.hpp  Color.hpp  Hittable.hpp  ImageBuffer.hpp  ImageWriter.hpp  PathRehnda.hpp  Perlin.hpp  Ray.hpp  RehndaMath.hpp  Sampler.hpp  Vec3.hpp
include/hittable/: Aabb.hpp  BvhNode.cpp  BvhNode.hpp  Hittable.hpp  HittableList.hpp  MovingSphere.hpp  Sphere.hpp
include/materials/: DielectricMaterial.hpp  LambertianMaterial.hpp  Material.hpp  MetalMaterial.hpp  Scatter.hpp
include/texture/: CheckerTexture.hpp  ImageTexture.hpp  NoiseTexture.hpp  SolidColor.hpp  Texture.hpp
previous_sample_images/: 10_2_refraction.ppm  10_4_schlicks.ppm  11_2_look_at_cam.ppm  11_2_look_at_cam_narrow_fov.ppm  12_depth_of_field.ppm  12_depth_of_field_smaller_aperture.ppm  7_depth_10.ppm  7_depth_30.ppm  8_diffuse_random_hemisphere.ppm  8_diffuse_random_unit_vector.ppm  9_5_metal_and_diffuse.ppm  9_6_metal_with_fuzziness.ppm
renders/: checker.ppm  earth_image_texture.ppm  motion_blur.ppm  perlin.ppm  perlin_marble.ppm  tracy.ppm  two_spheres.ppm
src/: Aggregator.cpp  Camera.cpp  ImageBuffer.cpp  ImageWriter.cpp  Perlin.cpp  Sampler.cpp  main.cpp
src/hittable/: Aabb.cpp  BvhNode.cpp  HittableList.cpp  MovingSphere.cpp  Sphere.cpp
src/materials/: DielectricMaterial.cpp  LambertianMaterial.cpp  MetalMaterial.cpp
src/texture/: CheckerTexture.cpp  ImageTexture.cpp  NoiseTexture.cpp  SolidColour.cpp
